Completed V1.0
Integration has been completed and have implemented file system for ease of use and debugging, gui errors and styling has been fixed, new classes have been created to integrate the whole system, the whole application has been compiled into a jar file for easy execution.